syntax = "proto3";

option go_package = "pb";

service CryptoVotingService {
  rpc CreateCrypto (Crypto) returns (CreateCryptoResponse);
  rpc UpvoteCrypto (UpvoteCryptoRequest) returns (UpvoteCryptoResponse);
}

message Crypto {
  string id = 1;
  string name = 2;
  int64 up = 3;
  int64 down = 4;
  int64 total = 5;
}

message CreateCryptoResponse {
  Crypto crypto = 1;
}

message UpvoteCryptoRequest {
  string id = 1;
}

message UpvoteCryptoResponse {
  bool ok = 1;
}
